--- a/team_picker/views/cohorts.ejs
+++ b/team_picker/views/cohorts.ejs
@@ -5,7 +5,7 @@
 <div class="card mb-3">
     <div class="card-body">
         <h4 class="card-title w-25">
-            <img src="<%= cohort.logoUrl %>" class="card-img-top w-25 rounded-circle" alt="logoUrl">
+            <img src="<%= cohort.logoUrl %>" class="card-img-top w-25" alt="logoUrl">
             <%= cohort.name %></h4>
         <p class="card-text"><%= cohort.members %></p>
         <a href="/cohorts/<%= cohort.id %>" class="btn btn-primary">Show Cohort</a>
