--- a/team_picker/views/home.ejs
+++ b/team_picker/views/home.ejs
@@ -1,5 +1,5 @@
 <%-include("./partials/header.ejs")%>
 
-<h1>Welcome to Super Team Picker</h1>
+<h3>Welcome to Super Team Picker 👋</h3>
 
 <%-include("./partials/footer.ejs")%>
