--- a/team_picker/views/partials/header.ejs
+++ b/team_picker/views/partials/header.ejs
@@ -2,32 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Super Team Picker</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Super Team Picker</title>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
 
-    <script src="/javascripts/jquery.min.js"></script>
-    <script src="/javascripts/popper.min.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/popper.min.js"></script>
 </head>
 
 
 <ul class="nav justify-content-center">
 
-    <h4 class="nav-item">
-        <a class="navbar-brand d-flex w-50 mr-auto nav-link active" href="/">Super Team Picker</a>
-    </h4>
-    <li class="nav-item ml-auto justify-content-end">
-        <a class="nav-link active" href="/">Home</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/cohorts">Cohorts</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/cohorts/new">New Cohort</a>
-    </li>
+  <h4 class="nav-item">
+    <a class="navbar-brand d-flex w-50 mr-auto nav-link active" href="/">Super Team Picker</a>
+  </h4>
+  <li class="nav-item ml-auto justify-content-end">
+    <a class="nav-link active" href="/">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/cohorts">Cohorts</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/cohorts/new">New Cohort</a>
+  </li>
 </ul>
 <div>&nbsp;</div>
 
